tests/compile-fail/misc_unit_assignments.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/misc_unit_assignments.rs:6:18
  |
6 |     let _c = a + b;
  |                  ^ expected `AngleKind`, found `()`
  |
  = note: expected struct `Quantity<{float}, SiDim<typenum::int::Z0, typenum::int::Z0, typenum::int::NInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>>, typenum::int::Z0, typenum::int::Z0, typenum::int::Z0, typenum::int::Z0>, AngleKind>`
             found struct `Quantity<{float}, SiDim<typenum::int::Z0, typenum::int::Z0, typenum::int::NInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>>, typenum::int::Z0, typenum::int::Z0, typenum::int::Z0, typenum::int::Z0>, ()>`
